v0.3/distributed/consensus/synod-eventual/README.md
# SYNOD-EVENTUAL

##### This repository contains theory and proofs about the Synod consensus algorithm


##### Instructions:

* The `progress-proof.ath` file contains the proof of eventual progress for the Synod consensus protocol using the failure-aware actor model under soem specific asynchronous conditions

* The `conditions-proof.ath` file contains the proof of our conditions under predicate fairness for FAM

* The proofs make use of the SPASS Automatic Theorem Prover for proving the proof obligation at each step

* Refer to the ATHENA [Download Instructions](https://proofcentral.org/athena/1.4/) to properly set up SPASS in your operating system

* Refer to [this PDF](https://proofcentral.org/book/Appendix_D.pdf) to learn more about using ATPs with ATHENA

* Once ATHENA and SPASS have been installed and set up, load `progress-proof.ath` to verify the proofs using ATHENA

* The `OUTPUT_progress-proof` file contains preverified output of `progress-proof.ath` in ATHENA

* The `OUTPUT_conditions-proof` file contains preverified output of `conditions-proof.ath` in ATHENA

###### Note: This library is under development and many modules may be currently just stubs

##### DISCLAIMER: 

Copyright &copy; 2020 WCL

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
#### <p align="middle">***** THIS IS AN OPEN SOURCE PROJECT! *****</p>

